Added forgot-password button redirection added static value to settings file

--- a/common/templates/email.html
+++ b/common/templates/email.html
@@ -106,13 +106,13 @@
      <span style="font-size: 16px;
       display: block;">{{before_button}}</span>
    </div>
-   <button style="background-color: #000;
+   <a href="{{button_url}}"><button style="background-color: #000;
       color: #fff;
       border-radius: 4px;
       padding: 10px 20px;
       border: 0;
       width: 100%;
-      cursor: pointer;">{{button_text}}</button>
+      cursor: pointer;">{{button_text}}</button></a>
    <p>À bientôt,<br>
 L’équipe Applicab</p>
  </div>
