Email template color and font changes && Response type changes'

--- a/common/templates/email.html
+++ b/common/templates/email.html
@@ -80,7 +80,7 @@
       margin-top: 10px;
     }
   </style>
-<body style="background-color: #E5E5E5; font-family: 'Poppins', sans-serif; font-size: 14px;">
+<body style="background-color: #F6F7F9; font-family: 'Poppins', sans-serif; font-size: 14px;">
 
  <div class="logo" style="text-align: center;
       width: 150px;
@@ -112,6 +112,7 @@
       padding: 10px 20px;
       border: 0;
       width: 100%;
+      font-size: 16px;
       cursor: pointer;">{{button_text}}</button></a>
    <p>À bientôt,<br>
 L’équipe Applicab</p>
