--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -27,6 +27,37 @@ Basic Table Styles
   margin-bottom: 30px;
 }
 
+.messagesTab{
+  margin: -5rem 0rem 4rem 15rem;
+}
+
+.sendButton{
+  margin: 0px 25px 0px 25px;
+}
+
+.senderName{
+  margin: -4.3rem 0rem 3rem 7rem;
+    width: 180px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+}
+.readMsgTime{
+  margin: -5.5rem 0rem 0rem 26rem;
+}
+.reveiverName{
+  margin: -3.3rem 0rem 0rem 135.4rem;
+    width: 120px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+}
+.reveiveMsgTime{
+  margin: -2.5rem 0rem 0rem 148rem;
+}
+.receiverAvatar{
+  margin-right: 22rem;
+}
 .caseManagementTabs .MuiTabs-flexContainer.muiltr-heg063-MuiTabs-flexContainer {
   justify-content: center;
 }
