--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -165,6 +165,9 @@ table.simple.borderless thead tr th {
 .message-searchbar{
   transform: inherit !important;
 }
+#selectedContactsMenu ul li{
+  flex-direction: column;
+}
 
 @media screen and (max-width: 767px) {
   .caseManagementTabs
