--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -180,6 +180,9 @@ table.simple.borderless thead tr th {
   .message-tab-header{
   flex-direction: column;
   }
+  .senderClient {
+	margin: 0rem 0rem -2rem 5rem;
+  }
 }
 .autocomplete label {
   color: #ffffff !important;
