--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -183,6 +183,9 @@ table.simple.borderless thead tr th {
   .senderClient {
 	margin: 0rem 0rem -2rem 5rem;
   }
+  .senderTime {
+	margin: -2rem 0rem 0rem 28rem;
+  }
 }
 .autocomplete label {
   color: #ffffff !important;
