--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -168,6 +168,9 @@ table.simple.borderless thead tr th {
 .selectedContactsMenu ul li{
   flex-direction: column;
 }
+.faq-search{
+  width: 400px;
+}
 
 @media screen and (max-width: 767px) {
   .caseManagementTabs
