--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -252,3 +252,11 @@ table.simple.borderless thead tr th {
   color: #fff;
   font-size: 14px;
 }
+
+input#icon-button-file {
+  color: #43daf1;
+  margin: 0rem -22rem 0rem -5rem;
+}
+input[type=file]::-webkit-file-upload-button {
+  visibility: hidden;
+}
