--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -277,6 +277,10 @@ input[type="file"]::-webkit-file-upload-button {
   display: inline-block;
   white-space: break-spaces;
 }
+.rowsPerPage p{
+  margin: 0 !important;
+}
+
 @media screen and (max-width: 767px) {
   .caseManagementTabs
     .MuiTabs-flexContainer.muiltr-heg063-MuiTabs-flexContainer {
