Bulk-update && email fixes

--- a/common/templates/email.html
+++ b/common/templates/email.html
@@ -99,6 +99,7 @@
    <p style="margin-bottom: 40px;">{{text2}}</p>
    <p  style="margin-bottom: 40px;">{{text3}}</p>
    <p  style="margin-bottom: 40px;">{{text4}}</p>
+   <p  style="margin-bottom: 40px;">{{text5}}</p>
    <div class="number-box" style="font-size: 30px;
       text-align: center;
       margin-bottom: 40px">
@@ -114,8 +115,8 @@
       width: 100%;
       font-size: 16px;
       cursor: pointer;">{{button_text}}</button></a>
-   <p>À bientôt,<br>
-L’équipe Applicab</p>
+   <p>{{footer_text1}}<br>
+{{footer_text2}}</p>
  </div>
  <div class="email-bottom" style="text-align: center;
       width: 460px;
