--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -280,7 +280,9 @@ input[type="file"]::-webkit-file-upload-button {
 .rowsPerPage p{
   margin: 0 !important;
 }
-
+.muiltr-ub5i9i-MuiInputBase-input-MuiOutlinedInput-input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 100px #1f2836 inset;
+}
 @media screen and (max-width: 767px) {
   .caseManagementTabs
     .MuiTabs-flexContainer.muiltr-heg063-MuiTabs-flexContainer {
