Refactore : Welcome email

--- a/common/templates/email.html
+++ b/common/templates/email.html
@@ -93,7 +93,7 @@
       padding: 30px;
       width: 90%;">
    <div class="title">
-       {{title}} <span><img src={{title_image}}></span> {{title2}}
+       {{title}} <span><img src={{title_image}}></span> <br> {{title2}}
    </div>
    <p style="margin-bottom: 40px;">{{text1}}</p>
    <p style="margin-bottom: 40px;">{{text2}}</p>
