--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -101,7 +101,14 @@ Basic Table Styles
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
-
+.table-responsive-todo {
+  display: block;
+  width: 100%;
+  height: 50rem;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
 .textWidthLimit {
   text-overflow: ellipsis;
   white-space: nowrap;
