--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -284,8 +284,16 @@ input[type="file"]::-webkit-file-upload-button {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  width: 220px;
+  max-width: 15rem;
+  display: block;
+}
+.etapeTab-txt {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   width: 300px;
-  max-width: 24rem;
+  max-width: 19rem;
   display: block;
 }
 .position-txt {
