modified template && dlete userr issue

--- a/common/templates/email.html
+++ b/common/templates/email.html
@@ -138,9 +138,9 @@
     </a>
   </div>
   <div class="email-bottom-text" style="margin-top: 10px;">
-    <a>www.app.applicab-avocats.com</a>
+    <a>www.applicab-avocats.com</a>
     <p>Réinvente la relation avocat - client grâce à un espace partagé de suivi des dossiers</p>
-    <p>Applicab-Avocats, <br>23 rue Nollet, 75017 Paris, FRANCE</p>
+    <p>AppliCab Avocats, <br>23 rue Nollet, 75017 Paris, FRANCE</p>
   </div>
  </div>
     
