resolved screen scroll issue in date change

--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -303,6 +303,36 @@ input[type="file"]::-webkit-file-upload-button {
   cursor: pointer;
   color: rgb(105, 188, 251)
 }
+.muiltr-epd502 {
+	max-height: 208px;
+}
+.muiltr-dhopo2 {
+  overflow-y: auto;
+  min-height: 136px;
+}
+.muiltr-1n2mv2k {
+  margin-top: -16px;
+}
+.muiltr-mvmu1r {
+  margin-top: -1rem;
+}
+.muiltr-1dozdou {
+  margin-top: 0rem;
+}
+.muiltr-negr19-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
+  height: 2rem;
+  width: 2rem;
+  margin-top: 7px;
+}
+.muiltr-1lvzwbs-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
+  color: #fff;
+  height: 2rem;
+  width: 2rem;
+  margin-top: 7px;
+  background-color: #404B57;
+  font-weight: 500;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
 .rowsPerPage p {
   margin: 0 !important;
 }
