Made changes on email templates

--- a/common/templates/email.html
+++ b/common/templates/email.html
@@ -124,15 +124,15 @@
   <img src="{{cube_image}}" style="width: 30px;">
   <div class="email-bottom-icon" style=" display: block;">
     <p style="margin: 20px 0 10px;">Follow us on</p>
-    <a href="{{faceBook_url}}" target="_blank">
+    <a href="{{faceBook_url}}" target="_blank" style="text-decoration: NONE;">
       <img src="{{faceBook_image}}" style=" width: 20px;
       padding: 3px;">
     </a>
-    <a href="{{Instagram_url}}" target="_blank">
+    <a href="{{Instagram_url}}" target="_blank" style="text-decoration: NONE;">
       <img src="{{Instagram_image}}" style=" width: 20px;
       padding: 3px;">
     </a>
-    <a href="{{Linkedin_url}}" target="_blank">
+    <a href="{{Linkedin_url}}" target="_blank" style="text-decoration: NONE;">
         <img src="{{Linkedin_image}}" style=" width: 20px;
       padding: 3px;">
     </a>
